Updated some cool stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,16 @@
 <head>
 	<title>To Do Task - Modules</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'CSS/bootstrap.min.css' %}">
+	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+	<!-- Bootstrap tooltips -->
+	<script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
 </head>
 <body>
 	<div id="container" style="background: white">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
 		  <a class="navbar-brand" href="/">My Subject Tasks</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -21,6 +27,9 @@
 		      </li>
 		      <li class="nav-item active">
 		        <a class="nav-link" href="/tasks_done">Tasks Done</a>
+		      </li>
+		      <li class="nav-item active">
+		        <a class="nav-link" href="/schedule">Schedule</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -37,13 +46,6 @@
 	    {% endif %}
 			{% block content %}{% endblock %}
 		</div>
-
-		<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-		<!-- Bootstrap tooltips -->
-		<script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
-		<!-- Bootstrap core JavaScript -->
-		<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
 		{% block script %}{% endblock %}
 </body>
 </html>
