--- a/templates/done_tasks.html
+++ b/templates/done_tasks.html
@@ -22,6 +22,7 @@
 							<button style="float: right;" class="btn btn-danger btn-md my-0 p mr-2">Delete</button>
 						</a>
 						<small style="float: right; margin-top: 10px;" class="mr-4">Week: {{tasks.week_num}}</small>
+						<small>{{tasks.x_ago}}</small>
 					</div>
 				</div>
 			{% endfor %}
