Added Procfile and Delete necessary stuff

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,13 @@
 <html>
 <head>
 	<title>To Do Task - Modules</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'CSS/bootstrap.min.css' %}">
-	<script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
-	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+	<!-- jQuery and JS bundle w/ Popper.js -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
 	<div id="container" style="background: white">
